Vertex Selection broken #64779

Closed
opened 2019-05-18 02:03:22 +02:00 by William Reynish · 19 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38

Blender Version
Broken: version: 2.80 (sub 69), branch: master (modified), commit date: 2019-05-17 23:11, hash: 40a7ec8375
Worked: (2.80 2019-05-15)

Short description of error
Selecting objects, faces and edges works normally, but vertex selection is erratic. It selects basically random points.

This is only the case on the intel GPU-based laptop, not my desktop. However, this used to work reliably until today.

Exact steps for others to reproduce the error

  • Open default blend
  • enter Edit Mode
  • Make sure you are in Vertex Select mode
  • click on a vertex

Here that doesn't work.

Box selecting like this:
Screenshot 2019-05-18 at 02.02.08.png

Results in this peculiar selection:
Screenshot 2019-05-18 at 02.03.02.png

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38 **Blender Version** Broken: version: 2.80 (sub 69), branch: master (modified), commit date: 2019-05-17 23:11, hash: `40a7ec8375` Worked: (2.80 2019-05-15) **Short description of error** Selecting objects, faces and edges works normally, but vertex selection is erratic. It selects basically random points. This is only the case on the intel GPU-based laptop, not my desktop. However, this used to work reliably until today. **Exact steps for others to reproduce the error** - Open default blend - enter Edit Mode - Make sure you are in Vertex Select mode - click on a vertex Here that doesn't work. Box selecting like this: ![Screenshot 2019-05-18 at 02.02.08.png](https://archive.blender.org/developer/F7044516/Screenshot_2019-05-18_at_02.02.08.png) Results in this peculiar selection: ![Screenshot 2019-05-18 at 02.03.02.png](https://archive.blender.org/developer/F7044518/Screenshot_2019-05-18_at_02.03.02.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii This might be related to recent changes in the selection code.

@mano-wii This might be related to recent changes in the selection code.

I can't reproduce the bug on either the Intel HD 4000 or the AMD Radeon HD 7570M :\

@WilliamReynish, can you try applying this patch?
select_id_debug.diff

With this patch, when you select a vertex, the selection texture should be visible. And look like this:
Sem título.png

Or at least with smaller vertices.

I can't reproduce the bug on either the Intel HD 4000 or the AMD Radeon HD 7570M :\ @WilliamReynish, can you try applying this patch? [select_id_debug.diff](https://archive.blender.org/developer/F7045471/select_id_debug.diff) With this patch, when you select a vertex, the selection texture should be visible. And look like this: ![Sem título.png](https://archive.blender.org/developer/F7045484/Sem_título.png) Or at least with smaller vertices.

Added subscriber: @dan2

Added subscriber: @dan2

I'm having the same problem using an Intel Iris 550 on a macbook pro (mojave 10.14.4) Worth noting that the seemingly random selection is consistent when not changing the view so it might have something to do with how the backfacing verts are excluded from selection (how that is gpu related is beyond me, I'm not a coder).

#64800 might be about the same issue, as mentioned there vert selection is working fine when xray is activated.

I'm having the same problem using an Intel Iris 550 on a macbook pro (mojave 10.14.4) Worth noting that the seemingly random selection is consistent when not changing the view so it might have something to do with how the backfacing verts are excluded from selection (how that is gpu related is beyond me, I'm not a coder). #64800 might be about the same issue, as mentioned there vert selection is working fine when xray is activated.

Added subscriber: @galfim

Added subscriber: @galfim

I'm having the same problem using an MacBook Pro (Retina, 13-inch, Mid 2014 (mojave 10.14.3).

I'm having the same problem using an MacBook Pro (Retina, 13-inch, Mid 2014 (mojave 10.14.3).

@dan2, @galfim did the problem show up about 2 days ago or did it last longer?
The OpenGL logic on the 8a6414ed46 has not changed. It is difficult to identify how this commit can bring such problems. And where the problem really is.
(Note: X-ray selection is totally different from the other. So this information does not help much).

@dan2, @galfim did the problem show up about 2 days ago or did it last longer? The OpenGL logic on the 8a6414ed46 has not changed. It is difficult to identify how this commit can bring such problems. And where the problem really is. (Note: X-ray selection is totally different from the other. So this information does not help much).

I can reproduce the exact same issue. For me this issue started after the recent edit mode selection changes - since then vertex selection has been broken.

I can reproduce the exact same issue. For me this issue started after the recent edit mode selection changes - since then vertex selection has been broken.

seemed to be working fine with the build from 15.05.2019 - 8a6414ed46.

It seems to be persistent across selection modes (paint select,box select, or even when changing mode to extend/intersect selection, etc)

seemed to be working fine with the build from 15.05.2019 - 8a6414ed46f6. It seems to be persistent across selection modes (paint select,box select, or even when changing mode to extend/intersect selection, etc)

Yes. I think the problem started two days ago. the previous version was ok. test on two different macbooks and I had the same problem.

Yes. I think the problem started two days ago. the previous version was ok. test on two different macbooks and I had the same problem.

This new de version ( 2.80 Beta macOS 64 bit May 20, 06:41:46) vertex selection is working. Thank you all.

This new de version ( 2.80 Beta macOS 64 bit May 20, 06:41:46) vertex selection is working. Thank you all.

Added subscriber: @artoonick

Added subscriber: @artoonick

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
William Reynish self-assigned this 2019-05-20 16:14:04 +02:00

Resolved by d7ef7d8046

Resolved by d7ef7d804609

Still can't select vertices in Edit mode for 3184460ff7 version. It only works in XRay

Still can't select vertices in Edit mode for **3184460ff7f4** version. It only works in XRay

Excuse. I tested it on another older Mac, with Operating system: High Sierra macOS 10.13.6, Graphics card: ATI Radeon HD 4670 256 MB. And the vertex selection is working. I'll test it over night, on my other macbook where I had the problem. I was so happy that I forgot that detail.

Excuse. I tested it on another older Mac, with Operating system: High Sierra macOS 10.13.6, Graphics card: ATI Radeon HD 4670 256 MB. And the vertex selection is working. I'll test it over night, on my other macbook where I had the problem. I was so happy that I forgot that detail.

This new version o Blender (2.80 Beta macOS 64 bit May 20, 16:33:28 - 9efe117535), also, vertex selection is working on my MacBook Pro (macOS 10.14.5 - Intel Iris 1536 MB) . Thank you all again.

This new version o Blender (2.80 Beta macOS 64 bit May 20, 16:33:28 - 9efe117535c6), also, vertex selection is working on my MacBook Pro (macOS 10.14.5 - Intel Iris 1536 MB) . Thank you all again.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64779
No description provided.