Edit Mesh Select: Fix OpenGL status to use `GPU_point_size`.

The problem has worsened in rB94db2c1f3243.
Maybe this has contributed to T64779.